fix: update ::-webkit-scrollbar

--- a/assets/scss/common/_global.scss
+++ b/assets/scss/common/_global.scss
@@ -1,8 +1,3 @@
-html,
-body {
-  overflow-y: scroll;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   html,
   body {
